--- a/view/app.css
+++ b/view/app.css
@@ -10,7 +10,7 @@
 	}
 
 	.toast-container {
-		@apply fixed top-0 end-0 p-3 flex flex-col gap-2;
+		@apply fixed bottom-0 end-0 p-3 flex flex-col gap-2;
 	}
 	
 	.toast {
